cabal-version:      3.4
name:               stamina
version:            0.1.0.3
synopsis:           Retries for humans
homepage:           https://github.com/cachix/stamina.hs
license:            Apache-2.0
license-file:       LICENSE
author:             Domen Kožar
maintainer:         domen@cachix.org
category:           Control
build-type:         Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common warnings
    ghc-options: -Wall
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:  
       Stamina
     , Stamina.HTTP
    build-depends:    base >= 4.2 && < 5,
                      http-client,
                      http-types,
                      time,
                      exceptions,
                      random
    hs-source-dirs:   src

test-suite stamina-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        stamina,
        hspec,
        mtl,
        exceptions,
        time,
        http-client

-- typechecks README during CI but doesn't run it
executable readme
  main-is:        README.lhs
  build-depends:  stamina, base, exceptions
  ghc-options:    -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
